fixed settings tabs having a gap beneath them in some cases

--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -738,6 +738,8 @@
         width: 100%;
         background: $alt;
         li {
+            height: 41px;
+            line-height: 41px;
             a.pm_button {
                 border-color: $alt;
                 background: $alt-light;
